# archive-downloader

./: .gitignore  .releaserc  LISENSE.md  README.md  build.py  generator.py  main.py  pyproject.toml
.github/workflows/: release.yml
app/: archive_downloader.py  article_generator_yt.py
