
[tool.poetry]
name = "archive-downloader"
version = "0.1.0"
description = "A starter CLI app project in Python"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
typer = "^0.12.5"
pyinstaller = "^6.10.0"
curl-cffi = "^0.7.1"
cloudscraper = "^1.2.71"
uvicorn = "^0.30.6"
fastapi = "^0.114.1"
g4f = "^0.3.2.8"
motor = "^3.5.1"
odmantic = "^1.0.2"
spacy = "^3.7.6"
scikit-learn = "^1.5.2"
gensim = "^4.3.3"
rich = "^13.8.1"
youtube-transcript-api = "^0.6.2"
yt-dlp = "^2024.9.27"
bs4 = "^0.0.2"
tqdm = "^4.66.6"
psutil = "^6.1.0"
keyboard = "^0.13.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
