[tool.poetry]
name = "archive-downloader"
version = "0.1.0"
description = "A starter CLI app project in Python"
authors = ["Andy Vandaric <andyvandaric@gmail.com>"]
readme = "README.md"
repository = "https://github.com/andyvandaric/archive-downloader"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
typer = "^0.12.5"
rich = "^13.8.1"
tqdm = "^4.66.6"
psutil = "^6.1.0"
keyboard = "^0.13.5"
bs4 = "^0.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
python-semantic-release = "^9.12.0"
pyinstaller = "^6.11.0"

[tool.semantic_release]
version_source = "pyproject"
changelog_file = "CHANGELOG.md"
patch_without_tag = false
commit_parser = "angular"
tag_format = "v{version}"

[tool.semantic_release.changelog]
mode = "update"
insertion_flag = "<!-- version list -->"
exclude_commit_patterns = [
  '''chore(?:\([^)]*?\))?: .+''',
  '''ci(?:\([^)]*?\))?: .+''',
  '''refactor(?:\([^)]*?\))?: .+''',
  '''style(?:\([^)]*?\))?: .+''',
  '''test(?:\([^)]*?\))?: .+''',
  '''build\((?!deps\): .+)''',
  '''Merged? .*'''
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
